--- a/src/app/template-driven/template-driven.component.html
+++ b/src/app/template-driven/template-driven.component.html
@@ -10,7 +10,10 @@
           <button class="btn btn-default" type="button">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
-            <input type="email" id="email" class="form-control" name="email" ngModel required email>
+            <input type="email" id="email" class="form-control" name="email" ngModel required email #email="ngModel">
+            <span class="help-block" *ngIf="email.touched && email.invalid">
+              Please enter a valid email!
+            </span>
           </div>
         </div>
         <div class="form-group">
