Using [(ngModel)] for two-way binding.

--- a/src/app/template-driven/template-driven.component.html
+++ b/src/app/template-driven/template-driven.component.html
@@ -23,6 +23,10 @@
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
+        <div class="form-group">
+          <textarea name="questionAnswer" [(ngModel)]="answer" class="form-control"></textarea>
+          <p>Your reply: {{answer}} </p>
+        </div>
         <button class="btn btn-primary" type="submit" [disabled]="f.invalid">Submit</button>
       </form>
     </div>
