Takes gender input by radio button, dynamically populates gender options from component class.

--- a/src/app/template-driven/template-driven.component.html
+++ b/src/app/template-driven/template-driven.component.html
@@ -28,6 +28,12 @@
           <textarea name="questionAnswer" [(ngModel)]="answer" class="form-control"></textarea>
           <p>Your reply: {{answer}} </p>
         </div>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input type="radio" name="gender" ngModel [value]="gender" required>
+            {{gender}}
+          </label>
+        </div>
         <button class="btn btn-primary" type="submit" [disabled]="f.invalid">Submit</button>
       </form>
     </div>
