--- a/src/app/template-driven/template-driven.component.html
+++ b/src/app/template-driven/template-driven.component.html
@@ -7,7 +7,7 @@
             <label for="username">Username</label>
             <input type="text" id="username" class="form-control" name="username" ngModel required>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input type="email" id="email" class="form-control" name="email" ngModel required email #email="ngModel">
