Fixes nav-tabs to route app on click on these.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,14 @@
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
       <ul class="nav nav-tabs">
-        <li role="presentation">
-          <a href="#">Admin</a>
-        </li>
         <li role="presentation" class="active">
-          <a href="#">Signup</a>
+          <a href="/">Home</a>
+        </li>
+        <li role="presentation">
+          <a href="/users">Users</a>
+        </li>
+        <li role="presentation">
+          <a href="/servers">Servers</a>
         </li>
       </ul>
     </div>
