--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
     <div class="col-sm-10 col-sm-offset-1">
       <ul class="nav nav-tabs">
         <li role="presentation" class="active">
-          <a href="/">Home</a>
+          <a routerLink="/">Home</a>
         </li>
         <li role="presentation">
-          <a href="/users">Users</a>
+          <a routerLink="users">Users</a>
         </li>
         <li role="presentation">
-          <a href="/servers">Servers</a>
+          <a [routerLink]="['/servers']">Servers</a>
         </li>
       </ul>
     </div>
