Changing absolute path to relative path on users link.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
           <a routerLink="/">Home</a>
         </li>
         <li role="presentation">
-          <a routerLink="users">Users</a>
+          <a routerLink="/users">Users</a>
         </li>
         <li role="presentation">
           <a [routerLink]="['/servers']">Servers</a>
