--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
       <ul class="nav nav-tabs">
-        <li role="presentation" class="active">
+        <li role="presentation">
           <a routerLink="/">Home</a>
         </li>
         <li role="presentation">
-          <a routerLink="/users">Users</a>
+          <a routerLink="/users/admin">Admin</a>
         </li>
         <li role="presentation">
           <a [routerLink]="['/servers']">Servers</a>
