--- a/src/app/template-driven/template-driven.component.html
+++ b/src/app/template-driven/template-driven.component.html
@@ -1,47 +1,44 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+    <div class="col-sm-10">
       <form (ngSubmit)="onSubmit()" #f="ngForm">
         <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">
           <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" class="form-control" name="username" ngModel required>
+            <label for="firstname">Firstname</label>
+            <input type="text" id="firstname" class="form-control" name="firstname" ngModel required placeholder="your first name">
           </div>
-          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
-            <label for="email">Mail</label>
-            <input type="email" id="email" class="form-control" name="email" ngModel required email #email="ngModel">
-            <span class="help-block" *ngIf="email.touched && email.invalid">
-              Please enter a valid email!
-            </span>
+            <label for="lastname">Lastname</label>
+            <input type="text" id="lastname" class="form-control" name="lastname" ngModel required placeholder="your lastname">
           </div>
         </div>
         <p class="help-block" *ngIf="userData.invalid && userData.touched">User Data is invalid.</p>
         <div class="form-group">
-          <label for="secret">Secret Questions</label>
-          <select id="secret" class="form-control" [ngModel]="defaultQuestion" name="secret">
-            <option value="pet">Your first Pet?</option>
-            <option value="teacher">Your first teacher?</option>
-          </select>
+          <label for="email">Mail</label>
+          <input type="email" id="email" class="form-control" name="email" ngModel required email #email="ngModel" placeholder="e.g abc@xyz.com">
+          <span class="help-block" *ngIf="email.touched && email.invalid">
+            Please enter a valid email!
+          </span>
         </div>
         <div class="form-group">
-          <textarea name="questionAnswer" [(ngModel)]="answer" class="form-control"></textarea>
-          <p>Your reply: {{answer}} </p>
+          <label for="contact">Contact:</label>
+          <input type="text" id="contact" name="contact" class="form-control" placeholder="Enter contact number"ng-required="true" ngModel>
         </div>
-        <div class="radio" *ngFor="let gender of genders">
-          <label>
-            <input type="radio" name="gender" ngModel [value]="gender" required>
-            {{gender}}
-          </label>
+        <div class="form-group">
+          <label for="address">Address:</label>
+          <textarea name="address" id="address" [(ngModel)]="answer" class="form-control"></textarea>
+          <p>Your address: {{answer}} </p>
         </div>
         <button class="btn btn-primary" type="submit" [disabled]="f.invalid">Submit</button>
+        <button class="btn btn-warning" type="reset" (click)="onReset()">Reset</button>
       </form>
     </div>
   </div>
   <div class="row" *ngIf="submitted">
     <div class="col-sm-12">
       <h3>Your Data</h3>
-      <p>Username: {{user.username}} </p>
+      <p>Firstname: {{user.firstname}} </p>
+      <p>Lastname: {{user.lastname}} </p>
       <p>Mail: {{user.email}} </p>
       <p>Secret Question: {{user.secretQuestion}} </p>
       <p>Answer: {{user.answer}} </p>
