--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -8,6 +8,6 @@
     </div>
   </div>
   <div class="col-sm-12">
-    <p>place user component here</p>
+    <router-outlet></router-outlet>
   </div>
 </div>
