--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -40,9 +40,8 @@
       <p>Firstname: {{user.firstname}} </p>
       <p>Lastname: {{user.lastname}} </p>
       <p>Mail: {{user.email}} </p>
-      <p>Secret Question: {{user.secretQuestion}} </p>
-      <p>Answer: {{user.answer}} </p>
-      <p>Gender: {{user.gender}} </p>
+      <p>Contact: {{user.contact}} </p>
+      <p>Address: {{user.address}} </p>
     </div>
   </div>
 </div>
