Taking string input on directive's properties via Input decoraator while initializing their default values inside directive.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <p appBasicHighlight>
   home component works, it is styled with basic highlight directive!
 </p>
-<p appBetterHighlight>
+<p appBetterHighlight [defaultColor]="'violet'" [highlightColor]="'green'">
   home component works, it is styled with better highlight directive!
 </p>
