Fixes bug of not hightlighting element with defaultColor, initializes defaultColor inside onInit.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <p appBasicHighlight>
   home component works, it is styled with basic highlight directive!
 </p>
+<!-- angular checks if found sets these properties i.e defaultColor and highlightColor on directive, before it reaches the native DOM element -->
 <p appBetterHighlight [defaultColor]="'violet'" [highlightColor]="'green'">
   home component works, it is styled with better highlight directive!
 </p>
