Creates 'unless' custom structural directive exactly opposite to *ngIf directive.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,8 @@
   home component works, it is styled with basic highlight directive!
 </p>
 <!-- angular checks if found sets these properties i.e defaultColor and highlightColor on directive, before it reaches the native DOM element -->
-<p appBetterHighlight [defaultColor]="'violet'" [highlightColor]="'green'">
+<p appBetterHighlight [defaultColor]="'violet'" highlightColor="green">
   home component works, it is styled with better highlight directive!
 </p>
+
+<p *appUnless="false"> I m visible for false condition </p>
